# re-recaptcha

./: .gitignore  README.md  SPEC.md  download_train_bus.py  download_train_other.py  ex_train_bus.py  main.py  plot.py  predict_recaptcha.py  pyproject.toml  split_recaptcha.py  split_train_val.py  train_resnet.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yml
docs/: classification.pyの出力まとめ.md  classification.py実行方法.md  モデルに関する調査.md  予備実験振り返り.md  分類モデル実行結果_bus.md  実験の進め方.md
make rough image/: rough_bus.py
my_bus_dataset_robust/: dataset.yaml
my_bus_dataset_robust/labels/: train.cache
my_bus_dataset_robust/labels/train/: 000000000724_fog.txt  000000001532_fog.txt  000000001584_mosaic.txt  000000002006_fog.txt  000000005037_fog.txt  000000006040_clean.txt  000000006723_clean.txt  000000007088_clean.txt  000000008762_mosaic.txt  000000009891_clean.txt  000000010363_clean.txt  000000011197_fog.txt  000000014380_mosaic.txt  000000015272_clean.txt  000000015440_fog.txt  (+85 more)
research/: モデルに関する調査.md
src/: OD.py  add_noise.py  classification.py  download.py  preprocess.py  recover_vision.py  test_best_model.py
src/my_recaptcha_dataset/: labels.json
src/test_images_coco/: annotations.json  annotations_preview.csv
画像分類/: README.md  classification.py  data_augment.py  download_train_bus.py  download_train_other.py  main.py  memo.md  split_train_val.py  train_resnet.py
画像分類/eval/: compare_models.py  download_real_recaptcha.py  evaluate.py  filter_validity.py  make_real_recaptcha_labels.py
画像分類/未使用/: README.md  generate_noise_bus.py  proto.py
(+10 files in other folders)
