[project]
name = "re-recaptcha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0",
    "grad-cam>=1.5.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
